# Recurse-Presentation-Clicker

./: .gitignore  Cargo.toml  README.md  build.rs  fp-lib-table  rc-demo.kicad_pcb  rc-demo.kicad_pro  rc-demo.kicad_sch  rust-toolchain.toml
RC_Demo.pretty/: rc-logo.kicad_mod
src/: main.rs
